testsuite/tests/typecheck/should_fail/T5691.stderr

T5691.hs:24:10: error: [GHC-39999]
    • No instance for ‘Alternative RecDecParser’
        arising from the superclasses of an instance declaration
    • In the instance declaration for ‘MonadPlus RecDecParser’

T5691.hs:24:10: error: [GHC-39999]
    • No instance for ‘Monad RecDecParser’
        arising from the superclasses of an instance declaration
    • In the instance declaration for ‘MonadPlus RecDecParser’
